--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -18,6 +18,8 @@ jobs:
   build:
     needs: test
     runs-on: ubuntu-latest
+    outputs:
+      output1: ${{ steps.publish.outputs.script_file }}
     steps:
       - name: Get code
         uses: actions/checkout@v3
@@ -25,6 +27,10 @@ jobs:
         run: npm ci
       - name: Build website
         run: npm run build
+      - name: Publish JS filename
+        id: publish
+        ## alternative==>  find dist/assets/*.js -type f -execdir echo '::set-output name=script_file::{}' ';'
+        run: find dist/assets/*.js -type f -execdir echo 'script_file={}' >> $GITHUB_OUTPUT ';'
       - name: list files
         run: ls -a
       # uploading artifacts
@@ -53,5 +59,7 @@ jobs:
           name: dist-files
       - name: Output contents
         run: ls
+      - name: output filename
+        run: echo "${{ needs.build.outputs.output1 }}"
       - name: Deploy
         run: echo "Deploying..."
